--- a/index.html
+++ b/index.html
@@ -122,21 +122,19 @@
 					<hr>
 
 					<h4>SKILLS</h4>
-					<p>Frontend developer with primary focus on React: <a target="_blank" href="resume.pdf">Download Resume</a></p>
+					<p>Frontend developer with primary focus on React: <a target="_blank" href="Nicolas C-E CV.pdf">Download Resume</a></p>
 					<div id="skills">
 						<ul>
 							<li>JavaScript</li>
 							<li>React JS</li>
 							<li>HTML5/CSS3</li>
 							<li>SASS</li>
-							<li>Typescript</li>
 						</ul>
 
 						<ul>
 							<li>Git & GitHub</li>
 							<li>APIs</li>
 							<li>Styled-Components</li>
-							<li>Bootstrap5</li>
 							<li>Polyglot</li>
 						</ul>
 					</div>
