--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 			<div class="intro-wrapper">
 				<div class="nav-wrapper">
 
-					<!-- Link around dots-wrapper added after tutorial video -->
 					<a href="index.html">
 						<div class="dots-wrapper">
 							<div id="dot-1" class="browser-dot" onclick="alerts()"></div>
@@ -34,7 +33,7 @@
 				</div>
 
 				<div class="left-column">
-					<img id="profile_pic" src="images/natu.jpg">
+					<img id="profile_pic" src="images/beachboy.jpg">
 					<h5 style="text-align: center;line-height: 0;">Personalize This Theme!</h5>
 
 					<div id="theme-options-wrapper">
@@ -51,12 +50,8 @@
 							<p>Passionate Web Developer, Adventurer & Polyglot.</p>
 					<div id="preview-shadow">
 						<div id="preview">
-							<div id="corner-tl" class="corner"></div>
-							<div id="corner-tr" class="corner"></div>
 							<h3>What I Do:</h3>
 							<p>Junior Front-end Web Developer, Polyglot.</p>
-							<div id="corner-br" class="corner"></div>
-							<div id="corner-bl" class="corner"></div>
 						</div>
 					</div>
 				</div>
