--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<section class="s1">
 		<div class="main-container">
 			<div class="greeting-wrapper">
-				<h1>I'm Nicolas Canala-Echevarria.</h1>
+				<h1>I'm Nicolás Canala-Echevarría.</h1>
 			</div>
 
 			<div class="intro-wrapper">
@@ -37,8 +37,10 @@
 					<h5 style="text-align: center;line-height: 0;">Personalize This Theme!</h5>
 
 					<div id="theme-options-wrapper">
-						<div data-mode="light" id="light-mode" class="theme-dot"></div>
-						<div data-mode="blue" id="blue-mode" class="theme-dot"></div>
+						<!-- <div data-mode="light" id="light-mode" class="theme-dot"></div>
+						<div data-mode="blue" id="blue-mode" class="theme-dot"></div> -->
+						<div data-mode="light" id="blue-mode" class="theme-dot"></div>
+						<div data-mode="blue" id="light-mode" class="theme-dot"></div>
 						<div data-mode="green" id="green-mode" class="theme-dot"></div>
 						<div data-mode="purple" id="purple-mode" class="theme-dot"></div>
 					</div>
@@ -51,7 +53,7 @@
 					<div id="preview-shadow">
 						<div id="preview">
 							<h3>What I Do:</h3>
-							<p>Junior Front-end Web Developer, Polyglot.</p>
+							<p>Front-end Web Development, Polyglot.</p>
 						</div>
 					</div>
 				</div>
@@ -120,21 +122,26 @@
 						<ul>
 							<li>JavaScript</li>
 							<li>React JS</li>
+							<li>Next JS</li>
 							<li>HTML5/CSS3</li>
 							<li>SASS</li>
+							<li>Styled-Components</li>
 						</ul>
 
 						<ul>
-							<li>Strapi</li>
+							<li>SCRUM</li>
 							<li>Git</li>
 							<li>APIs</li>
-							<li>Styled-Components</li>
+							<li>Chakra-UI</li>
+							<li>Strapi</li>
+							<li>Laravel</li>
 						</ul>
 					</div>
 				</div>
 				
 				<div class="social-links">
-					<img id="social_img" src="images/compu1.jpg">
+					<!-- <img id="social_img" src="images/compu1.jpg"> -->
+					<img id="social_img" src="images/beachboy.jpg">
 					<h3>Find me on GitHub & Linkedin</h3>
 
 					<a target="_blank" href="https://github.com/Nicolascanala">Github: @Nicolascanala</a>
