--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
 				<input class="input-field" type="text" name="subject">
 
 				<label>Email</label>
-				<input class="input-field" type="text" name="email">
+				<input class="input-field" type="text" name="email" required>
 
 				<label>Message</label>
-				<textarea class="input-field" name="message"></textarea>
+				<textarea class="input-field" name="message" required></textarea>
 
 				<input id="submit-btn" type="submit" value="Send">
 			</form>
